# food

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
format/: README.md  example.md  guidelines.md
src/: args.rs  cfg.rs  main.rs  qty.rs  recipe.rs
