[package]
name = "food"
version = "0.1.0"
authors = ["Anton Österberg <anton@42x.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
clap = { version = "2.33", features = [ "suggestions", "color" ] }
regex = "1.3"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.7"
fwalker = "0.3"
rand = "0.7"
chrono = "0.4"
itertools = "0.9"

[build-dependencies]
built = { version = "0.4", features = ["git2"] }

[profile.release]
lto = true
